<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_favorite"
        android:title="@string/menu_favorite"
        android:icon="@drawable/ic_unfavorite"
        app:showAsAction="always"
        />
</menu>